--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,8 @@
 }
 
 .btn-primary {
-    background-color: #121f26;
-    border-color: #121f26;
+    background-color: #ff8c00;
+    border-color: #ff8c00;
 }
 
 .btn-primary:hover {
